test/visibility/duplicateMod.good
duplicateMod.chpl:7: In module 'Program':
duplicateMod.chpl:8: error: cannot find module or enum named 'Sub' in module 'Sub'
